corrected link styles and link and logo alignment

--- a/src/components/Navigation.module.css
+++ b/src/components/Navigation.module.css
@@ -28,12 +28,12 @@
     }
 
     .navigation {
-        align-items: flex-start;
+        align-items: center;
     }
 
     .navigationMenu {
         display: flex;
-        width: 47%;
+        width: 40%;
         justify-content: space-evenly;
         align-items: flex-start;
     }
@@ -44,12 +44,18 @@
         font-size: .9375rem;
         color: #FFFFFF;
         text-decoration: none;
+        padding: 1em 1.5em;
+        border-radius: 28px;
     }
 
     .desktopNav:hover {
+        font-family: "Fraunces", sans-serif;
         background-color: rgb(255, 255, 255, .3);
-        font-family: "Fraunces", sans-serif; 
-        border-radius: 28px;
-        padding: 1em 1.5em;
+    }
+
+    .desktopNav:focus {
+        font-family: "Fraunces", sans-serif;
+        color: #000000;
+        background-color: #FFFFFF;
     }
 }
